--- a/css/index.css
+++ b/css/index.css
@@ -1,35 +1,53 @@
-@charset "UTF-8";
 h2 {
-  color: green; }
+  color: green;
+}
 
 .map {
   width: 200px;
   height: 200px;
-  background-color: red; }
-  .map a {
-    font-size: 16px;
-    color: green; }
-    .map a:hover {
-      font-size: 24px;
-      color: #000; }
-  .map:hover {
-    background-color: #fff;
-    border: 1px solid #000; }
+  background-color: red;
+}
+.map a {
+  font-size: 16px;
+  color: green;
+}
+.map a:hover {
+  font-size: 24px;
+  color: #000;
+}
+.map:hover {
+  background-color: #fff;
+  border: 1px solid #000;
+}
 
 .div1 {
   font-family: fantasy;
   font-size: 30px;
   font-weight: bold;
   width: 500px;
-  background-color: green; }
+  background-color: green;
+}
 
 .div2 {
-  font-family: '瀹嬩綋';
+  font-family: fantasy;
   font-size: 36px;
+  font-weight: bold;
   color: #000;
   background-color: red;
   height: 100px;
   line-height: 100px;
-  border: 2px solid #000; }
+  border: 2px solid #000;
+}
+
+.div3 {
+  border: 2px solid #000;
+  padding: 10px;
+}
+.div3 p {
+  width: 500px;
+  background-color: green;
+  font-size: 24px;
+  font-family: fantasy;
+}
 
 /*# sourceMappingURL=index.css.map */
